<resources>
    <string name="app_name">effect</string>
    <string name="popular">인기</string>
    <string name="life">생활</string>
    <string name="interview">면접</string>

    <!-- 업로드 -->
    <string name="upload_toolbar_title">이펙트 업로드</string>
    <string name="upload_title_hint">제목을 입력해주세요</string>
    <string name="upload_image_add_btn">내 사진 추가</string>
    <string name="upload_content_hint">내용을 입력해주세요</string>

    <!-- 마이페이지 -->
    <string name="mypage_my_effect_btn">나의 이펙트</string>
    <string name="bookmark">북마크</string>
    <string name="my_effect">나의 이펙트</string>
</resources>