<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.github.leeHana21.gdg_hackathon.view.MainActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_list">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interview" />
        </com.google.android.material.tabs.TabLayout>

       <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_main"
           tools:listitem="@layout/card_full_posts"
           app:layout_constraintBottom_toTopOf="@id/lay_nav_bottom"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_nav_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/rv_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_home"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_home"
                android:onClick="@{()->activity.onClickHome()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_add_post" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_add_post"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_plus"
                android:onClick="@{()->activity.onAddPostClick()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_home"
                app:layout_constraintEnd_toStartOf="@id/iv_profile" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_profile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_profile"
                android:onClick="@{()->activity.onClickProfile()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_add_post"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>