<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="empty"
            type="java.lang.Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/upload_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_toolbar_title"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/search_cart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/img_completed" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_toolbar">

            <Spinner
                android:id="@+id/upload_category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/upload_title_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/upload_title_hint"
                android:textColor="@color/color_888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/upload_category_spinner" />

            <ImageView
                android:id="@+id/upload_image_btn"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/upload_title_edit_txt" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_default_image"
                android:visibility="@{empty ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/upload_image_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/upload_image_btn"
                app:layout_constraintTop_toTopOf="@+id/upload_image_btn" />

            <ImageButton
                android:id="@+id/detail_effect_spread_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_radius_square_solid_6201ff_btn"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_image_btn" />

            <ImageView
                android:id="@+id/detail_effect_spread_image"
                android:layout_width="18dp"
                android:layout_height="19dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_effect_spread"
                app:layout_constraintBottom_toBottomOf="@+id/detail_effect_spread_btn"
                app:layout_constraintEnd_toStartOf="@+id/detail_effect_spread_txt"
                app:layout_constraintTop_toBottomOf="@+id/upload_image_btn"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/detail_effect_spread_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="내 사진 추가"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/detail_effect_spread_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_image_btn" />

            <EditText
                android:id="@+id/et_contents"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_upload_content_edit_txt"
                android:hint="@string/upload_content_hint"
                android:padding="12dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_effect_spread_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>